SERVER-119117 Remove filter for non pending task (#47743)

GitOrigin-RevId: f8a448268527a903c5f78efa76ad3de53966ee3a